made corrections and started jdbc assignment